# Shopping-Assistant-Chatbot

./: .gitignore  Agent workflow sketch.pptx  BLIP-2 Fine-Tune.docx  LICENSE  Readme.md  pipeline_config.toml  run-perf-test.py  run-perf-tests.sh  run.sh  run_agent.sh  run_agent_google_drive.sh  run_agent_s3.sh  run_pipeline.sh  setenv.bat
assets/: blip-2-processors-coco.pkl  blip-2-processors.pkl  contexttimer-0.3.3-py3-none-any.whl  iopath-0.1.10-py3-none-any.whl  kaggle-1.6.17-py3-none-any.whl
code/: st-ui.py
code/Agent/: LangGraph_agent.py  app.py  test.ipynb  util.py
code/Agent_API_endpoint/: Blip-2_connection.py  LangGraph_agent.py  app.py  test.ipynb  util.py
code/Blip-2-API-endpoint/: app.py
code/Blip-2_API_endpoint/: app.py
code/Blip-2_embeddings/: computer_2_run_emeddings.py  debug.ipynb  embeddings.py
code/Blip-2_fine_tune/: computer_2_run.py  computer_2_run_abo.py  computer_2_run_gs.py  computer_4_run.py  fine_tune_pretrain.py  fine_tune_pretrain_abo.py  fine_tune_pretrain_gs.py  run_abo.py  shared.py
code/Data_pipeline/: 1_english_tags.py  2_product_type_spaces.py  3_english_check.py  4_product_type_verification.py  5_embed_to_chroma.py  config.toml  embed_to_chroma.py  embed_to_chroma_5.py  english-check.py  english_check.py  english_check_3.py  english_tags.py  english_tags_1.py  filter-non-english.py  product_type_fix.py  product_type_spaces.py  product_type_spaces_2.py  product_type_verification.py  product_type_verification_4.py  run_pipeline.sh
code/LLM_DB_API_endpoint/: app.py
code/Llama_data_checks/: check_image_category.py  computer_2_run.py  computer_3_run.py  missing_items.pkl
code/Pipeline/: filter-non-english.py  preprocess_metadata.py
code/Test_image_stream/: app.py  receiver.ipynb
code/UI/: app.py  requirements.txt  st-ui.py  ui2.py
code/notebooks/: Blip-2-fine-tune.ipynb  ChromaDemo.ipynb  Chroma_DB.ipynb  Chroma_DB_save_docs.ipynb  Chroma_DB_save_embeddings.ipynb  Huggingface_Llama_Vision.ipynb  LLM-tests.ipynb  LangChain_to_LangGraph.ipynb  LangGraph.ipynb  Marqo-GS-10M-EDA.ipynb  Marqo-GS-10M.ipynb  Ollama_Llama_Vision.ipynb  RAG-evaluation-DeepEval.ipynb  ShopTalkEDA.ipynb  ShopTalkEDA_local.ipynb  Test-Blip-2-load.ipynb  image-to-string.ipynb  language_detection.ipynb  st-embeddings-and-vector-db-v2.ipynb  st-embeddings-and-vector-db.ipynb  st-pretrained-llm-with-vecotrdb-search.ipynb  st_image_captioning.ipynb  st_images.ipynb
docker/: .env  agent.dockerfile  blip-2.dockerfile  docker-compose.yml  llm_db.dockerfile  ui.dockerfile
python_envs/ShopTalk_py3.11/: pyproject.toml
python_envs/ShopTalk_py3.12/: pyproject.toml
python_envs/py3.11_blip-2/: pyproject.toml  requirements.txt
python_envs/py3.11_deploy/: pyproject.toml  requirements.txt
python_envs/py3.12_agent/: pyproject.toml  requirements.txt
python_envs/py3.12_llm_db/: pyproject.toml  requirements.txt
python_envs/py3.12_ui/: pyproject.toml
testing/: get-image.bat
