[tool.poetry]
name = "ShopTalk_py3.12"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
ipykernel = "^6.29.5"
torch = {version = "^2.5.1+cu124", source = "pytorch-gpu-src"}
torchvision = {version = "^0.20.1+cu124", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.5.1+cu124", source = "pytorch-gpu-src"}
requests = "^2.32.3"
transformers = "^4.47.0"
iprogress = "^0.4"
accelerate = "^1.1.1"
bitsandbytes = "^0.44.1"
huggingface-hub = "^0.26.2"
ipywidgets = "^8.1.5"
pandas = "^2.2.3"
mediapipe = "^0.10.18"
opencv-python = "^4.10.0.84"
google-cloud-translate = "^3.18.0"
datasets = {extras = ["vision"], version = "^3.1.0"}
open-clip-torch = "^2.29.0"
deepeval = "^2.0.5"
lm-format-enforcer = "^0.10.9"
langchain-huggingface = "^0.1.2"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.13"
bs4 = "^0.0.2"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
