[tool.poetry]
name = "py3.11_blip-2"
version = "0.1.0"
description = ""
authors = ["Ian Ellis <iellis@minevaluation.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
salesforce-lavis = "^1.0.2"
transformers = "4.26.1"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
numpy = "<2.0"
antlr4-python3-runtime = "^4.11.0"
pyparsing = "3.1.1"
blinker = "1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
