[tool.poetry]
name = "py3.11_deploy"
version = "0.1.0"
description = ""
authors = ["Ian Ellis <iellis@minevaluation.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
salesforce-lavis = "^1.0.2"
torch = {version = "^2.5.1+cu124", source = "pytorch-gpu-src"}
torchvision = {version = "^0.20.1+cu124", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.5.1+cu124", source = "pytorch-gpu-src"}
transformers = "4.26.1"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
