[tool.poetry]
name = "py3.12_agent"
version = "0.1.0"
description = ""
authors = ["Ian Ellis <iellis@minevaluation.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.32.3"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
langchain-ollama = "^0.2.2"
langgraph = "^0.2.60"
pandas = "^2.2.3"
chromadb-client = "^0.6.1"
light-embed = "^1.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
