[tool.poetry]
name = "py3.12_ui"
version = "0.1.0"
description = ""
authors = ["Ian Ellis <iellis@minevaluation.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
streamlit = "^1.41.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
